Revert "Fixed the Home margins"
This reverts commit 520a8d910cb31950a41423dfc706bffe07bc046e.

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -42,7 +42,7 @@
                         <a class="page-scroll" href="Portfolio.html">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="Contactme.html">Contact Me</a>
+                        <a class="page-scroll" href="#contact">Contact Me</a>
                     </li>
                 </ul>
             </div>
