--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html">ANS</a>
+                <a class="navbar-brand page-scroll" href="#index.html">ANS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,7 +52,7 @@
                         <a class="page-scroll" href="Portfolio.html">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="Contactme.html">Contact Me</a>
+                        <a class="page-scroll" href="#contact">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -67,17 +67,23 @@
          <div class="row">
             <div class="col-md-2 col-sm-4">
                 <a href="#">
-                        <img class="imgtop1" src="http://placehold.it/250x450" alt="">                   
-                </a>
-            </div>
-            <div class="col-md-2 col-sm-4">
-                <a href="#">                    
-                        <img class="imgtop2" src="http://placehold.it/250x450" alt="">                    
+                    <div class="img-top">
+                        <img class="imgtop1" src="http://placehold.it/250x450" alt="">
+                    </div>
                 </a>
             </div>
             <div class="col-md-2 col-sm-4">
                 <a href="#">
+                    <div class="img-top">
+                        <img class="imgtop2" src="http://placehold.it/250x450" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2 col-sm-4">
+                <a href="#">
+                    <div class="img-top">
                         <img class="imgtop3" src="http://placehold.it/250x450" alt="">
+                    </div>
                 </a>
             </div>
              
