--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#index.html">ANS</a>
+                <a class="navbar-brand page-scroll" href="index.html">ANS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,7 +52,7 @@
                         <a class="page-scroll" href="Portfolio.html">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact Me</a>
+                        <a class="page-scroll" href="Contactme.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
