--- a/Contactme.html
+++ b/Contactme.html
@@ -55,7 +55,7 @@
  <section id="contact">
      <div class="container">
          <div class="row">
-            <h2 class="section-heading"> ME</h2>
+            <h2 class="section-heading">CONTACT ME</h2>
                 <hr class="light">
                 <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
                 
