--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css"> 
   
+   <!-- Fonts-->
+     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css" type="text/css">
+     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,200,200italic,300italic,400italic|Roboto:400,100,300italic,300,100italic|Raleway:400,200,600,500,300,100|Playfair+Display:400,700,400italic,700italic,900,900italic' rel='stylesheet' type='text/css'>
     
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -38,7 +41,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html">ANS</a>
+                <a class="navbar-brand page-scroll" href="index.html">
+                    <img src="assets/img/ANS.png" alt="" style="position:absolute; width:5%; height:65%">
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
