--- a/Contactme.html
+++ b/Contactme.html
@@ -33,9 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html">
-                    <img src="assets/img/ANS.png" alt="" style="position:absolute; width:5%; height:65%">
-                </a>
+                <a class="navbar-brand page-scroll" href="#index.html">ANS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -75,16 +73,24 @@
             </div>
             
                <div class="col-lg-1">
-                <i class="fa fa-facebook" style="font-size:40"></i>
+                    <a href="https://www.facebook.com/irahsaid">
+                       <i class="fa fa-facebook" style="font-size:40"></i>
+                    </a>     
                  </div>
                 <div class="col-lg-1">
-                <i class="fa fa-instagram" style="font-size:40"></i>
+                    <a href="https://www.instagram.com/irahsaid/">
+                        <i class="fa fa-instagram" style="font-size:40"></i>
+                    </a>
                    </div>
                 <div class="col-lg-1">
-                <i class="fa fa-twitter" style="font-size:40"></i>
+                   <a href="https://twitter.com/aomi9064">
+                        <i class="fa fa-twitter" style="font-size:40"></i>
+                    </a>
                  </div> 
                  <div class="col-lg-1">
-                <i class="fa fa-behance-square" style="font-size:40"></i>
+                   <a href="https://www.behance.net/irahsaid">
+                    <i class="fa fa-behance-square" style="font-size:40"></i>
+                     </a>
                 </div>            
             </div>
         
