--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,9 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html">
-                    <img src="assets/img/ANS.png" alt="" style="position:absolute; width:5%; height:65%">
-                </a>
+                <a class="navbar-brand page-scroll" href="index.html">ANS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
