Changed the index contents with new illustrated images

--- a/Contactme.html
+++ b/Contactme.html
@@ -67,7 +67,8 @@
             <div class="col-lg-6">
                     <i class="fa fa-envelope" style="font-size:40"></i>
                     <p>irahnazirah@hotmail.com</p>
-                    <i class="fa fa-mobile" style="font-size:60"></i>
+                    <i class="fa fa-mobile" style="font-size:60">
+                    </i>
                     <p>+673 8669060</p>
 
             </div>
@@ -98,7 +99,7 @@
             <footer>
                 <div class="row">
                     <div class="col-lg-12">
-                        <p>Copyright &copy; Amal Nazirah Said 2016 </p>
+                        <h5>Copyright &copy; Amal Nazirah Said 2016 </h5>
                     </div>
                 </div>
             <!-- /.row -->
