--- a/Portfolio.html
+++ b/Portfolio.html
@@ -129,7 +129,7 @@
             <footer>
                 <div class="row">
                     <div class="col-lg-12">
-                        <p>Copyright &copy; Amal Nazirah Said 2016 </p>
+                        <h5>Copyright &copy; Amal Nazirah Said 2016 </h5>
                     </div>
                 </div>
             <!-- /.row -->
