--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
 <body id="page-bottom">
 
-    <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-bottom">
+    <nav id="mainNav" class="navbar navbar navbar-fixed-bottom">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -69,7 +69,7 @@
              <div class="row">
                 <div class="col-lg-3 col-md-4">
                     <a href="About.html">
-                            <img class="img-responsive" src="assets/img/test1.png" alt="">
+                            <img class="img-responsive" src="assets/img/test1a.png" alt="">
 
                     </a>
                 </div>
@@ -90,7 +90,7 @@
                 <footer>
                     <div class="row">
                         <div class="col-lg-12">
-                            <p>Copyright &copy; Amal Nazirah Said 2016 </p>
+                            <h5>Copyright &copy; Amal Nazirah Said 2016 </h5>
                         </div>
                     </div>
                 <!-- /.row -->
