--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
     
 <body id="page-bottom">
 
-    <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-bottom">
+    <nav id="mainNav" class="navbar navbar navbar-fixed-bottom">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -60,7 +60,7 @@
        <div class="container">
             <div class="row">
                <div class="col-md-4">
-                    <h1 class="section-heading">ABOUT</h1>
+                    <h1 class="section-heading">ABOUT ME</h1>
                     <hr>
                     <p class="text-faded">Amal Nazirah Said. 21.</p>                    
                 </div>
