--- a/Contactme.html
+++ b/Contactme.html
@@ -23,7 +23,7 @@
     
 <body id="page-bottom">
 
-    <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-bottom">
+    <nav id="mainNav" class="navbar navbar navbar-fixed-bottom">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -60,7 +60,7 @@
      <div class="container">
          <div class="row">
            <div class="col-lg-12">
-                <h2 class="section-heading">CONTACT ME</h2>
+                <h1 class="section-heading">CONTACT ME</h1>
                     <hr class="light">
             </div>
             
