--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,7 +23,7 @@
     
 <body id="page-bottom">
 
-    <nav id="mainNav" class="navbar navbar-inverse navbar-fixed-bottom">
+    <nav id="mainNav" class="navbar navbar navbar-fixed-bottom">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
