--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <!-- Fonts-->
      <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css" type="text/css">
      <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,200,200italic,300italic,400italic|Roboto:400,100,300italic,300,100italic|Raleway:400,200,600,500,300,100|Playfair+Display:400,700,400italic,700italic,900,900italic' rel='stylesheet' type='text/css'>
+     <link href='https://fonts.googleapis.com/css?family=Philosopher:400,700|Asul:400,700' rel='stylesheet' type='text/css'>
     
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -31,7 +32,7 @@
     
 <body id="page-bottom">
 
-    <nav id="mainNav" class="navbar navbar navbar-fixed-bottom">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-bottom">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
