Edited the designs, added some info in about

--- a/index.html
+++ b/index.html
@@ -75,19 +75,45 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-4 about">
-                    <a href="About.html">
-                        <img class="img-responsive" src="assets/img/mycv/test1a.png" alt="">
-                    </a>
+                    <div class="item item-type-line">
+                        <a class="item-hover" href="About.html" target="_blank">
+                            <div class="item-info">
+                                <div class="headline">About Me</div>
+                                <div class="line"></div>
+                                <!--nu <div class="date">Test</div> -->
+                            </div>
+                            <div class="mask"></div>
+                        </a>
+                        <div class="item-img"><img src="assets/img/mycv/test1a.png" alt="" class="img-responsive" /></div>
+                    </div>
                 </div>
+
                 <div class="col-lg-3 col-md-4">
-                    <a href="Portfolio.html">
-                        <img class="img-responsive" src="assets/img/mycv/test2.png" alt="">
-                    </a>
+                    <div class="item item-type-line">
+                        <a class="item-hover" href="Portfolio.html" target="_blank">
+                            <div class="item-info">
+                                <div class="headline">Portfolio</div>
+                                <div class="line"></div>
+                                <!--nu <div class="date">Test</div> -->
+                            </div>
+                            <div class="mask"></div>
+                        </a>
+                        <div class="item-img"><img src="assets/img/mycv/test2.png" alt="" class="img-responsive" /></div>
+                    </div>
                 </div>
+
                 <div class="col-lg-3 col-md-4">
-                    <a href="Contactme.html">
-                        <img class="img-responsive" src="assets/img/mycv/test3.png" alt="">
-                    </a>
+                    <div class="item item-type-line">
+                        <a class="item-hover" href="Contactme.html" target="_blank">
+                            <div class="item-info">
+                                <div class="headline">Contact Me</div>
+                                <div class="line"></div>
+                                <!--nu <div class="date">Test</div> -->
+                            </div>
+                            <div class="mask"></div>
+                        </a>
+                        <div class="item-img"><img src="assets/img/mycv/test3.png" alt="" class="img-responsive" /></div>
+                    </div>
                 </div>
             </div>
             <hr>
