--- a/About.html
+++ b/About.html
@@ -81,11 +81,15 @@
 <!--EDUCATION-->
                     <div class="col-md-8">
                         <h2 class="section-heading">EDUCATION</h2>
-                        <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                        <br>
+                        <h4><b>2006 - 2010</b></h4><p class="text-faded">Sekolah Menengah Pengiran Anak Puteri Hajah Masna</p>
+                        <h4><b>2011 - 2012</b></h4><p class="text-faded">Pusat Tingkatan Enam Meragang</p>
+                        <h4><b>2013 - still studying</b></h4><p class="text-faded">Institut Teknologi Brunei</p>
 
 <!--INTERESTS-->
                         <h2 class="section-heading">INTERESTS</h2>
-                        <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                        <br>
+                        <p class="text-faded">>d</p>
 
 <!--SKILLS DESCRIPTION-->
                         <h2 class="section-heading">SKILLS</h2>
