--- a/Portfolio.html
+++ b/Portfolio.html
@@ -96,11 +96,11 @@
                     <a href="#">
                         <div class=“item-inner”>
                             <div class=“portfolio-image”>
-                                <a href="assets/img/mycv/3D_dino:full.jpg">
+                                <a href="assets/img/mycv/3D_dino:full.jpg" target="_blank">
                                     <img class="img-responsive img-rounded" src="assets/img/mycv/3D_dino:thumb.jpg" alt="3D Dinosaur">
                                 </a>
                             </div>
-                            <h5>3D Dinosaur</h5>
+                            <h5>3D Dinosaur - Maya</h5>
                         </div>
                     </a>
                 </div>
@@ -109,11 +109,11 @@
                     <a href="#">
                         <div class=“item-inner”>
                             <div class=“portfolio-image”>
-                                <a href="assets/img/mycv/3D_dolphin:full.jpg">
+                                <a href="assets/img/mycv/3D_dolphin:full.jpg" target="_blank">
                                     <img class="img-responsive img-rounded" src="assets/img/mycv/3D_dolphin:thumb.jpg" alt="3D Dolphin">
                                 </a>
                             </div>
-                            <h5>3D Dolphin</h5>
+                            <h5>3D Dolphin - Maya</h5>
                         </div>
                     </a>
                 </div>
@@ -121,26 +121,63 @@
                     <a href="#">
                         <div class=“item-inner”>
                             <div class=“portfolio-image”>
-                                <a href="assets/img/mycv/3D_diningset:full.jpg">
+                                <a href="assets/img/mycv/3D_diningset:full.jpg" target="_blank">
                                     <img class="img-responsive img-rounded" src="assets/img/mycv/3D_diningset:thumb.jpg" alt="3D Dining Set">
                                 </a>
                             </div>
-                            <h5>3D Dining Set</h5>
+                            <h5>3D Dining Set - Maya</h5>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6 portfolio-item">
                     <a href="#">
                         <div class=“item-inner”>
-                            <div class=“portfolio-image”>
+                            <div class=“portfolio-image” target="_blank">
                                 <a href="assets/img/mycv/3D_diningroom:full.jpg">
-                                    <img class="img-responsive img-rounded" src="assets/img/mycv/3D_diningroom:thumb.jpg" alt="3D Dining Set">
+                                    <img class="img-responsive img-rounded" src="assets/img/mycv/3D_diningroom:thumb.jpg" alt="3D Dining Room">
                                 </a>
                             </div>
-                            <h5>3D Dining Room</h5>
+                            <h5>3D Dining Room - Maya</h5>
                         </div>
                     </a>
                 </div>
+                <div class="col-md-3 col-sm-6 portfolio-item">
+                    <a href="#">
+                        <div class=“item-inner”>
+                            <div class=“portfolio-image” target="_blank">
+                                <a href="assets/img/mycv/EmilyBlunt:full.jpg">
+                                    <img class="img-responsive img-rounded" src="assets/img/mycv/EmilyBlunt:thumb.jpg" alt="Emily Blunt">
+                                </a>
+                            </div>
+                            <h5>Emily Blunt Vector Drawing</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6 portfolio-item">
+                    <a href="#">
+                        <div class=“item-inner”>
+                            <div class=“portfolio-image” target="_blank">
+                                <a href="assets/img/mycv/Cards:full.jpg">
+                                    <img class="img-responsive img-rounded" src="assets/img/mycv/Cards:thumb.jpg" alt="Deck of Cards">
+                                </a>
+                            </div>
+                            <h5>Deck of Cards</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6 portfolio-item">
+                    <a href="#">
+                        <div class=“item-inner”>
+                            <div class=“portfolio-image” target="_blank">
+                                <a href="assets/img/mycv/toiletblender:full.png">
+                                    <img class="img-responsive img-rounded" src="assets/img/mycv/toiletblender:thumb.jpg" alt="Bathroom">
+                                </a>
+                            </div>
+                            <h5>3D Bathroom- Blender</h5>
+                        </div>
+                    </a>
+                </div>
+
             </div>
             <!-- /.row -->
 
