--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-4 about">
                     <div class="item item-type-line">
-                        <a class="item-hover" href="About.html" target="_blank">
+                        <a class="item-hover" href="About.html" target="">
                             <div class="item-info">
                                 <div class="headline">About Me</div>
                                 <div class="line"></div>
@@ -84,13 +84,13 @@
                             </div>
                             <div class="mask"></div>
                         </a>
-                        <div class="item-img"><img src="assets/img/mycv/test1a.png" alt="" class="img-responsive" /></div>
+                        <div class="item-img"><img src="assets/img/mycv/test1a.png" alt="" class="img-responsive"></div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4">
                     <div class="item item-type-line">
-                        <a class="item-hover" href="Portfolio.html" target="_blank">
+                        <a class="item-hover" href="Portfolio.html" target="">
                             <div class="item-info">
                                 <div class="headline">Portfolio</div>
                                 <div class="line"></div>
@@ -98,13 +98,13 @@
                             </div>
                             <div class="mask"></div>
                         </a>
-                        <div class="item-img"><img src="assets/img/mycv/test2.png" alt="" class="img-responsive" /></div>
+                        <div class="item-img"><img src="assets/img/mycv/test2.png" alt="" class="img-responsive"></div>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4">
                     <div class="item item-type-line">
-                        <a class="item-hover" href="Contactme.html" target="_blank">
+                        <a class="item-hover" href="Contactme.html" target="">
                             <div class="item-info">
                                 <div class="headline">Contact Me</div>
                                 <div class="line"></div>
@@ -112,7 +112,7 @@
                             </div>
                             <div class="mask"></div>
                         </a>
-                        <div class="item-img"><img src="assets/img/mycv/test3.png" alt="" class="img-responsive" /></div>
+                        <div class="item-img"><img src="assets/img/mycv/test3.png" alt="" class="img-responsive"></div>
                     </div>
                 </div>
             </div>
