Added "target" to portfolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -132,8 +132,8 @@
                 <div class="col-md-3 col-sm-6 portfolio-item">
                     <a href="#">
                         <div class=“item-inner”>
-                            <div class=“portfolio-image” target="_blank">
-                                <a href="assets/img/mycv/3D_diningroom:full.jpg">
+                            <div class=“portfolio-image”>
+                                <a href="assets/img/mycv/3D_diningroom:full.jpg" target="_blank">
                                     <img class="img-responsive img-rounded" src="assets/img/mycv/3D_diningroom:thumb.jpg" alt="3D Dining Room">
                                 </a>
                             </div>
@@ -144,8 +144,8 @@
                 <div class="col-md-3 col-sm-6 portfolio-item">
                     <a href="#">
                         <div class=“item-inner”>
-                            <div class=“portfolio-image” target="_blank">
-                                <a href="assets/img/mycv/EmilyBlunt:full.jpg">
+                            <div class=“portfolio-image”>
+                                <a href="assets/img/mycv/EmilyBlunt:full.jpg" target="_blank">
                                     <img class="img-responsive img-rounded" src="assets/img/mycv/EmilyBlunt:thumb.jpg" alt="Emily Blunt">
                                 </a>
                             </div>
@@ -156,8 +156,8 @@
                 <div class="col-md-3 col-sm-6 portfolio-item">
                     <a href="#">
                         <div class=“item-inner”>
-                            <div class=“portfolio-image” target="_blank">
-                                <a href="assets/img/mycv/Cards:full.jpg">
+                            <div class=“portfolio-image”>
+                                <a href="assets/img/mycv/Cards:full.jpg" target="_blank">
                                     <img class="img-responsive img-rounded" src="assets/img/mycv/Cards:thumb.jpg" alt="Deck of Cards">
                                 </a>
                             </div>
@@ -169,7 +169,7 @@
                     <a href="#">
                         <div class=“item-inner”>
                             <div class=“portfolio-image” target="_blank">
-                                <a href="assets/img/mycv/toiletblender:full.png">
+                                <a href="assets/img/mycv/toiletblender:full.png" target="_blank">
                                     <img class="img-responsive img-rounded" src="assets/img/mycv/toiletblender:thumb.jpg" alt="Bathroom">
                                 </a>
                             </div>
