Added animation to about and contact

--- a/About.html
+++ b/About.html
@@ -160,9 +160,9 @@
 
 <!-- jQuery -->
 <script src="/assets/js/jquery-2.2.0.min.js"></script>
-
 <!-- Bootstrap Core JavaScript -->
-<script src="/assets/js/bootstrap.min.js"></script>
+< script src="/assets/js/bootstrap.min.js">
+    </script>
 
 
 
