--- a/Contactme.html
+++ b/Contactme.html
@@ -90,15 +90,17 @@
 
                 <div class="row">
                     <div class="col-lg-4">
-                        <i class="pull-left fa fa-envelope" style="font-size:40"></i>
-                        <br>
-                        <p>irahnazirah@hotmail.com</p>
-                        <br>
-                        <i class="pull-left fa fa-mobile" style="font-size:60">
+                        <div class="leftside">
+                            <i class="pull-left fa fa-envelope" style="font-size:40"></i>
+                            <br>
+                            <p>irahnazirah@hotmail.com</p>
+                            <br>
+                            <i class="pull-left fa fa-mobile" style="font-size:60">
                     </i>
-                        <br>
-                        <p>+673 86XXXXX</p>
+                            <br>
+                            <p>+673 86XXXXX</p>
 
+                        </div>
                     </div>
 
                     <div class="col-lg-2">
