--- a/Contactme.html
+++ b/Contactme.html
@@ -87,8 +87,8 @@
                 </div>
 
 
-
                 <div class="row">
+                    <div class="col-lg-1"></div>
                     <div class="col-lg-4">
                         <div class="leftside">
                             <i class="pull-left fa fa-envelope" style="font-size:40"></i>
@@ -102,6 +102,7 @@
 
                         </div>
                     </div>
+
 
                     <div class="col-lg-2">
                     </div>
